// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Variant expressions Check Variant 1`] = `
"
        (
            template_id (static_id 0 (\\"variant.test.ts\\" 22))
            storage (literal (bool True) (\\"variant.test.ts\\" 23))
            storage_type (())
            messages ((ep1 True False False True (\\"variant.test.ts\\" 25) ((set_type (params (\\"variant.test.ts\\" 25)) (variant ((prop1 \\"nat\\") (prop2 \\"unit\\")) (Some ((\\"prop1\\") (\\"prop2\\"))) (\\"\\" -1)) (\\"variant.test.ts\\" 27)) (set (data) (isVariant (params (\\"variant.test.ts\\" 25)) \\"prop2\\" (\\"variant.test.ts\\" 27)) (\\"variant.test.ts\\" 27)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"variant.test.ts\\" 22))
        )
        "
`;

exports[`Variant expressions Check Variant 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"bool\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"or\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"nat\\",
                        \\"annots\\": [
                            \\"%prop1\\"
                        ]
                    },
                    {
                        \\"prim\\": \\"unit\\",
                        \\"annots\\": [
                            \\"%prop2\\"
                        ]
                    }
                ],
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CAR\\"
                },
                {
                    \\"prim\\": \\"IF_LEFT\\",
                    \\"args\\": [
                        [
                            {
                                \\"prim\\": \\"DROP\\"
                            },
                            {
                                \\"prim\\": \\"PUSH\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"bool\\"
                                    },
                                    {
                                        \\"prim\\": \\"False\\"
                                    }
                                ]
                            }
                        ],
                        [
                            {
                                \\"prim\\": \\"DROP\\"
                            },
                            {
                                \\"prim\\": \\"PUSH\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"bool\\"
                                    },
                                    {
                                        \\"prim\\": \\"True\\"
                                    }
                                ]
                            }
                        ]
                    ]
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Variant expressions Open Variant 1`] = `
"
        (
            template_id (static_id 0 (\\"variant.test.ts\\" 9))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"variant.test.ts\\" 12) ((set_type (params (\\"variant.test.ts\\" 12)) (variant ((prop1 \\"nat\\") (prop2 \\"unit\\")) (Some ((\\"prop1\\") (\\"prop2\\"))) (\\"\\" -1)) (\\"variant.test.ts\\" 14)) (set (data) (openVariant (params (\\"variant.test.ts\\" 12)) \\"prop2\\" None (\\"variant.test.ts\\" 14)) (\\"variant.test.ts\\" 14)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"variant.test.ts\\" 9))
        )
        "
`;

exports[`Variant expressions Open Variant 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"or\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"nat\\",
                        \\"annots\\": [
                            \\"%prop1\\"
                        ]
                    },
                    {
                        \\"prim\\": \\"unit\\",
                        \\"annots\\": [
                            \\"%prop2\\"
                        ]
                    }
                ],
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CAR\\"
                },
                {
                    \\"prim\\": \\"IF_LEFT\\",
                    \\"args\\": [
                        [
                            {
                                \\"prim\\": \\"PUSH\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"int\\"
                                    },
                                    {
                                        \\"int\\": \\"14\\"
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"FAILWITH\\"
                            }
                        ],
                        []
                    ]
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;
